<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_home"
        android:textSize="40sp"
        android:gravity="center"
        android:background="#0000AD"
        android:textStyle="bold"
        android:padding="10dp"
        android:textColor="@android:color/background_light"/>

    <LinearLayout
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#002A8E"
            android:text="@string/ch_o_m_ng"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:layout_weight="2"
            android:textColor="#002EFF"
            android:text="@string/phan_huy_hung" />
    </LinearLayout>

    <Button
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_marginTop="120dp"
        android:onClick="btnLogout"
        android:text="@string/ng_xu_t"
        android:textSize="20sp"
        tools:ignore="OnClick" />

</LinearLayout>